[gd_scene load_steps=2 format=3 uid="uid://uikqyx23nbrd"]

[ext_resource type="Script" path="res://Scenes/Stages/Objects/camera_bounds.gd" id="1_bmqie"]

[node name="CameraBounds" type="Node2D"]
process_mode = 3
script = ExtResource("1_bmqie")

[node name="AreaTrigger" type="Area2D" parent="."]
collision_layer = 64

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="AreaTrigger"]
build_mode = 1

[node name="BottomLeftPosition" type="Marker2D" parent="."]

[node name="TopRightPosition" type="Marker2D" parent="."]

[connection signal="body_entered" from="AreaTrigger" to="." method="_on_area_trigger_body_entered"]
